@@ -54,6 +54,8 @@ Version 1.4.22 - SVN
   - Optimized message highlighting rules; faster message list display
     and faster highlight rules management (thanks to C. Bensend for
     extensive effort helping diagnose)
+  - New Mail plugin no longer removes normal organization title when
+    putting the number of new messages in the browser title
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
